valgrind: Cleanup codebase.
* Make methods private.
* Remove unused methods.
* Removed redundant modifiers.
* Formatting and other issues spotted by Sonar.

Change-Id: I0de70e0a0ea9989bf911fecc66112512ea5e2885
Signed-off-by: Alexander Kurtakov <akurtako@redhat.com>
Reviewed-on: https://git.eclipse.org/r/24950
Tested-by: Hudson CI